Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -185,7 +185,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s citronem a koprovym maslem, bramborovy salat s cerstvymi okurkami, zelenymi bylinkami a majonezou 139</li><li>Peceny filet z cerstveho norskeho lososa s citronem a koprovym maslem, bramborovy salat s cerstvymi okurkami, zelenymi bylinkami a majonezou 169</li><li>Kruti medailonky po jihoindicku v citronove omacce s kokosovym mlekem a zazvorem, jasminova ryze, salatek 139</li><li>Spagety s nudlickami danci kyty, kapustou, smazenou cibulkou, jalapenos paprickami a zralou goudou {L} 169</li><li>Pecene papriky a cukety s olivovym olejem a balkanskym syrem, pohanka se smazenou cibulkou, salatek 139 </li></ol>
+<ol><li>Peceny filet z norskeho slede se salsou z cerstvych rajcat, okurek a bylinek, cervena cocka se zeleninou, salatek 139</li><li>Peceny filet z cerstve bile tresky se salsou z cerstvych rajcat, okurek a bylinek, cervena cocka se zeleninou, salatek 169</li><li>Peceny teleci brisket na bilem vine s kaparami, stouchane brambory s dyni, salatek 139</li><li>Burger s trhanym barbecue hovezim, rimskym salatem, horcicnou majonezou, rajcetem, syrem tilsiter a relisem z palivych paprik, pecene brambory, salatek {L} 169</li><li>Indicke kvetakove kari s kokosovym mlekem, cizrnou, rajcaty a jogurtem, jasminova ryze 139</li></ol>
 </td>
 </tr>
 </table>
