Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,21 +7,21 @@
 <h5>Středa, 08. 09. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Dršťková</strong>
+<strong>Vývar se zeleninou a nudlemi</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Hovězí s koprovou omáčkou a vařeným bramborem nebo houskovým knedlíkem</strong>
+<strong>Smažená vinná klobása se šťouchaným bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát s grilovanými kuřecími křidélky a medovo-hořčičným dresinkem</strong>
+<strong>Kari cizrna s kokosem, kurecim masem a tortillou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
