--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Středa, 08. 09. 2021</h5>
+<h5>Čtvrtek, 09. 09. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Vývar se zeleninou a nudlemi</strong>
@@ -50,61 +50,31 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Středa 8.9.2021</div>
+<div class="nadpis">Čtvrtek 9.9.2021</div>
 <ul>
 <li class="polevka">
-<div class="polozka">300ml Kuřecí vývar s nudlemi a zeleninou v menu <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Celer">9</em></div>
+<div class="polozka">300ml Frankfurstká polévka s uzeným masem v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
 <div class="cena">29 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="polevka">
-<div class="polozka">300ml Kuřecí vývar s nudlemi a zeleninou samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Celer">9</em></div>
+<div class="polozka">300ml Frankfurstká polévka s uzeným masem samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
 <div class="cena">39 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Uzená krkovice, křenová omáčka, restovaná cibulka, pečené grenaille <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="polozka"><span class="poradi">1. </span>150g Cottage pie - hovězí maso zapečené s bramborovou kaší a sýrem <em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
 <div class="cena">145 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Krůtí stroganof, restované žampiony, pórek, basmati rýže <em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="polozka"><span class="poradi">2. </span>300g Bramborové noky s kuřecím masem a sýrovou omáčkou, baby špenát, cherry rajčata <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
 <div class="cena">145 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Ragú z hlívy ústřičné, zapečená polenta se sušenými rajčaty, rukola <em title="Mléko">7</em></div>
+<div class="polozka"><span class="poradi">3. </span>300g Halloumi wrap s grilovanou zeleninou, variace listových salátů, jogurtový dip s kari kořením <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
 <div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>250g Variace bavorských baget <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">5. </span>200g Okurkový salát <em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">6. </span>200g Šopský salát s olivami <em title="Mléko">7</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">7. </span>200g Ovocný salát s melounem a ananasem </div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">8. </span>100g Borůvkový koláč s vanilkovým krémem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">9. </span>100g Drobenkový koláč <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">49 Kč</div>
 <div class="clear"></div>
 </li>
 </ul>
@@ -118,10 +88,10 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Květáková se smetanou</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi  ok</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborová s houbami</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Steak z vepřové pečeně na pepřové redukci s anglickou slaninou, dušená jasmínová rýže</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí </td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí guláš s feferonkou a cibulí, naše bramboráčky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zapečené brambory s listovým špenátem, kuřecím masem, smetanou a vejci, zelný salát</td><td class="menuPrice">127,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g dorůžova pečená vepřová panenka, celerové pyré se sýrem, černé olivy, grilované rajče, strouhaný parmazán</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené žampiony, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight">750g</td><td class="menuName">Pečené vepřové koleno, beraní roh, cibule, hořčice, křen, smažené bramborové plátky</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát ochucený olivovým olejem, nudličky z kuřecích prsou restované s anglickou slaninou, smažené rýžové nudle</td><td class="menuPrice">133,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Smažené masové karbanátky, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Křenová omáčka s uzeným masem, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřová kýta na paprice, těstoviny fusilli </td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Vepřové výpečky, kynuté houskové a bramborové knedlíky, špenát</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na sýrové omáčce s grilovanou paprikou, restované špetcle</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka, hráškové pyré se smetanou, vařené vejce, grilované rajče, strouhaný parmazán</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažená kuřecí kapsa plněná šunkou a sýrem v těstíčku, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Steak z vepřové krkovice s fazolovými lusky, bramborové pyré s máslem sypané uzeným sýrem</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný majonézovým dresinkem, smažené žampiony, vajíčko</td><td class="menuPrice">127,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr></tbody>
@@ -173,6 +143,11 @@
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Pikantní thajská TOM YUM s krevetami 4,6,7,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Vepřová pečeně špikovaná sušenými švestkami s glazovanou mrkví a mačkanými brambory s pažitkou 1a,7</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Tradiční řecká musaka s ragú z mletého masa, brambory, lilkem, rajčaty a bešamelem 1a,3,7,9</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">350g</td><td class="title">Špagety s kousky vepřové panenky, sušenými rajčaty, mladým špenátem, parmazánem a bazalkovým pestem 1a,3,7,8</td><td class="pricem">139 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
