Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -155,7 +155,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z norskeho slede se salsou z cerstvych rajcat, okurek a bylinek, cervena cocka se zeleninou, salatek 139</li><li>Peceny filet z cerstve bile tresky se salsou z cerstvych rajcat, okurek a bylinek, cervena cocka se zeleninou, salatek 169</li><li>Peceny teleci brisket na bilem vine s kaparami, stouchane brambory s dyni, salatek 139</li><li>Burger s trhanym barbecue hovezim, rimskym salatem, horcicnou majonezou, rajcetem, syrem tilsiter a relisem z palivych paprik, pecene brambory, salatek {L} 169</li><li>Indicke kvetakove kari s kokosovym mlekem, cizrnou, rajcaty a jogurtem, jasminova ryze 139</li></ol>
+<ol><li>Peceny cerstvy jihocesky pstruh s jogurtovou krenovou omackou, korenena ryze s beluga cockou, salatek 139</li><li>Peceny filet z cerstveho norskeho lososa s jogurtovou krenovou omackou, korenena ryze s beluga cockou, salatek 169</li><li>Indicke pikantni jalfrezi s krutim masem, paprikami, cerstvym chilli a lzici zakysane smetany, jasminova ryze, salatek 139</li><li>Smazene rizecky z panenske svickove, stouchane brambory s cibulkou, nakladana turecka zelenina {L} 169</li><li>Brokolicove placicky s goudou, stouchane brambory s cibulkou, tatarska omacka {L} 139</li></ol>
 </td>
 </tr>
 </table>
