Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,21 +7,21 @@
 <h5>Čtvrtek, 09. 09. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Vývar se zeleninou a nudlemi</strong>
+<strong>Kmínová s vejcem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Smažená vinná klobása se šťouchaným bramborem</strong>
+<strong>Krůtí výpečky s červeným zelím a bramborovým knedlíkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Kari cizrna s kokosem, kurecim masem a tortillou</strong>
+<strong>Staročeské kroupy se zelím a uzenou krkovičkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
