Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -130,7 +130,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy jihocesky pstruh s jogurtovou krenovou omackou, korenena ryze s beluga cockou, salatek 139</li><li>Peceny filet z cerstveho norskeho lososa s jogurtovou krenovou omackou, korenena ryze s beluga cockou, salatek 169</li><li>Indicke pikantni jalfrezi s krutim masem, paprikami, cerstvym chilli a lzici zakysane smetany, jasminova ryze, salatek 139</li><li>Smazene rizecky z panenske svickove, stouchane brambory s cibulkou, nakladana turecka zelenina {L} 169</li><li>Brokolicove placicky s goudou, stouchane brambory s cibulkou, tatarska omacka {L} 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s ratatouille z pecene zeleniny, pecene brambory, salatek 139</li><li>Peceny filet z cerstve prazmy kralovske s ratatouille z pecene zeleniny, pecene brambory, salatek 169</li><li>Pad kra pao – thajske restovane veprove s thajskou bazalkou, zelenymi fazolkami, sazenym vejcem a cerstvym chilli, jasminova ryze, salatek 139</li><li>Italske houbove rizoto s koroptvimi prsicky na bilem vine a parmezanem 169</li><li>Indicky dal z cervene cocky se zeleninou, ajowanem, rimskym kminem a zazvorem, arabsky chleb, citron, salatek 139</li></ol>
 </td>
 </tr>
 </table>
