Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Pátek, 10. 09. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Kmínová s vejcem</strong>
+<strong>Tomatová fazolová s uzeným masem a zelím</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Krůtí výpečky s červeným zelím a bramborovým knedlíkem</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							129,-
-						</span>
-</p>
-<p>
-<strong>Staročeské kroupy se zelím a uzenou krkovičkou</strong>
+<strong>Vepřová plec na cibuli a slanině s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
+						</span>
+</p>
+<p>
+<strong>Skořicové lívance s borůvkami a sladkým jagurtem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							99,-
 						</span>
 </p>
 <p>
