--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 10.9.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="polevka">
+<div class="polozka">300ml Řepný krém s křenem v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Řepný krém s křenem samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Pomalu tažená vepřová plec, omáčka z lesních hub, basmati rýže, čerstvé bylinky <em title="Mléko">7</em></div>
+<div class="cena">139 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Gratinovaný květák se smetanou a sýrem, bramborová kaše, zelný salát <em title="Vejce">3</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">139 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>250g Bavorské bagety dle denní nabídky  <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>200g Okurkový salát <em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">5. </span>100g Linecký koláč s tvarohem a lesním ovocem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">6. </span>80g Čokoládové brownie bez lepku <em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -130,7 +170,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s ratatouille z pecene zeleniny, pecene brambory, salatek 139</li><li>Peceny filet z cerstve prazmy kralovske s ratatouille z pecene zeleniny, pecene brambory, salatek 169</li><li>Pad kra pao – thajske restovane veprove s thajskou bazalkou, zelenymi fazolkami, sazenym vejcem a cerstvym chilli, jasminova ryze, salatek 139</li><li>Italske houbove rizoto s koroptvimi prsicky na bilem vine a parmezanem 169</li><li>Indicky dal z cervene cocky se zeleninou, ajowanem, rimskym kminem a zazvorem, arabsky chleb, citron, salatek 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s ratatouille z pecene zeleniny, pecene brambory, salatek 139</li><li>Peceny filet z cerstve prazmy kralovske s ratatouille z pecene zeleniny, pecene brambory, salatek 169</li><li>Pad kra pao – thajske restovane veprove s thajskou bazalkou, zelenymi fazolkami, sazenym vejcem a cerstvym chilli, jasminova ryze, salatek 139</li><li>Italske houbove rizoto s koroptvimi prsicky na bilem vine a parmezanem, salatek 169</li><li>Indicky dal z cervene cocky se zeleninou, ajowanem, rimskym kminem a zazvorem, arabsky chleb, citron, salatek ( L ) 139</li></ol>
 </td>
 </tr>
 </table>
