--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pátek, 10. 09. 2021</h5>
+<h5>Sobota, 11. 09. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Tomatová fazolová s uzeným masem a zelím</strong>
@@ -50,49 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pátek 10.9.2021</div>
+<div class="nadpis">Sobota 11.9.2021</div>
 <ul>
-<li class="polevka">
-<div class="polozka">300ml Řepný krém s křenem v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Řepný krém s křenem samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Pomalu tažená vepřová plec, omáčka z lesních hub, basmati rýže, čerstvé bylinky <em title="Mléko">7</em></div>
-<div class="cena">139 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>300g Gratinovaný květák se smetanou a sýrem, bramborová kaše, zelný salát <em title="Vejce">3</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">139 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>250g Bavorské bagety dle denní nabídky  <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>200g Okurkový salát <em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">5. </span>100g Linecký koláč s tvarohem a lesním ovocem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">6. </span>80g Čokoládové brownie bez lepku <em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">55 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -103,10 +63,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s nudlemi a zeleninou </td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Brokolicový krém se zakysanou smetanou</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažený sýr (45%), vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Cikánská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bratislavská vepřová kýta, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na roštu s volským okem, pečené brambory s kmínem, chilli dip</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Steak z vepřové pečeně, květákovo-brokolicové pyré s grilovaným rajčetem, strouhaný parmazán</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hrachová kaše s naší půlmetrovou norimberskou klobásou (96% masa, bezlepkové), sázené vejce, kyselá okurka</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažená vepřová kotleta bez kosti, bramborový salát, citron</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný olivovým olejem, dorůžova pečená plátkovaná vepřová panenka, olivy a kukuřice</td><td class="menuPrice">135,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Květáková s pažitkou</td><td class="menuPrice">37,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, špenát</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené holandské řízky, vařené brambory s máslem a šnitlíkem, kyselá okurka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s pórkem, pečené brambory s kmínem, mexický dip</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Plátkovaná kuřecí prsa na grilované zelenině, rukolový salátek s mozzarelou a rajčaty s bazalkovým pestem</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné kari omáčce, restované špecle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny fusili aglio-olio peperoncino s plátkovanou vepřovou panenkou, strouhaný parmazán</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná vepřovou panenkou, česnekovým dresinkem, sýrem, ledovým salátem a zeleninou, smažené bramborové hranolky, tatarka</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát ochucený olivovým olejem, smažené kuřecí stripsy, vařené vejce</td><td class="menuPrice">129,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr></tbody>
@@ -158,6 +121,11 @@
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"></table>
 </td>
 </tr>
 </table>
