Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -130,7 +130,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s ratatouille z pecene zeleniny, pecene brambory, salatek 139</li><li>Peceny filet z cerstve prazmy kralovske s ratatouille z pecene zeleniny, pecene brambory, salatek 169</li><li>Pad kra pao – thajske restovane veprove s thajskou bazalkou, zelenymi fazolkami, sazenym vejcem a cerstvym chilli, jasminova ryze, salatek 139</li><li>Italske houbove rizoto s koroptvimi prsicky na bilem vine a parmezanem, salatek 169</li><li>Indicky dal z cervene cocky se zeleninou, ajowanem, rimskym kminem a zazvorem, arabsky chleb, citron, salatek ( L ) 139</li></ol>
+<ol><li>Peceny cerstvy jihocesky siven s citronem a omackou z pecenych paprik, zeleninovy bulgur, salatek {L} 139</li><li>Peceny filet z cerstveho africkeho sumecka s citronem a omackou z pecenych paprik, zeleninovy bulgur, salatek {L} 169</li><li> Indicka kruti korma s pecenymi paprikami a kvetakem, kokosovym mlekem, zazvorem a orisky, jasminova ryze 139</li><li>Grilovane medailonky z panenske svickove s hruskovym catny, gratinovane brambory, salatek 169</li><li>Imam bayildi – zapecene lilky po turecku s rajcaty, restovanou cibulkou, bazalkou a balkanskym syrem, zeleninovy bulgur, salatek 139 </li></ol>
 </td>
 </tr>
 </table>
