--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,7 +52,57 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pondělí 13.9.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="polevka">
+<div class="polozka">300ml Zeleninový krém s krutony a pažitkou v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Zeleninový krém s krutony a pažitkou samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>140g Hovězí nudličky v teriyaki omáčce, koriandr, čerstvá zelenina, basmati rýže <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Kuřecí steak zapečený s mozzarellou a rajčaty, bramborová kaše, zeleninový salát <em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Ragú z černé čočky, pečená rajčata, sázené vejce, balsamiková redukce, rukola <em title="Vejce">3</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">139 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>250g Variace bavorských baget <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">5. </span>200g Okurkový salát <em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">6. </span>200g Ovocný salát </div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">7. </span>100g Pražský koláč <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">8. </span>80g Míša dort s tvarohem a čokoládou <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -130,7 +180,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy jihocesky siven s citronem a omackou z pecenych paprik, zeleninovy bulgur, salatek {L} 139</li><li>Peceny filet z cerstveho africkeho sumecka s citronem a omackou z pecenych paprik, zeleninovy bulgur, salatek {L} 169</li><li> Indicka kruti korma s pecenymi paprikami a kvetakem, kokosovym mlekem, zazvorem a orisky, jasminova ryze 139</li><li>Grilovane medailonky z panenske svickove s hruskovym catny, gratinovane brambory, salatek 169</li><li>Imam bayildi – zapecene lilky po turecku s rajcaty, restovanou cibulkou, bazalkou a balkanskym syrem, zeleninovy bulgur, salatek 139 </li></ol>
+<ol><li>Peceny cerstvy jihocesky siven s citronem a omackou z pecenych paprik, zeleninovy bulgur, salatek {L} 139</li><li>Peceny filet z cerstveho africkeho sumecka s citronem a omackou z pecenych paprik, zeleninovy bulgur, salatek {L} 169</li><li> Indicka kruti korma s pecenymi paprikami a kvetakem, kokosovym mlekem, zazvorem a orisky, jasminova ryze 139</li><li>Grilovane medailonky z panenske svickove s hruskovym catny, gratinovane brambory, salatek 169</li><li>Imam bayildi – zapecene lilky po turecku s rajcaty, restovanou cibulkou, bazalkou a balkanskym syrem, zeleninovy bulgur, salatek (L)139 </li></ol>
 </td>
 </tr>
 </table>
