Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,21 +7,21 @@
 <h5>Úterý, 14. 09. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Vývar se zeleninou a uzeným masem</strong>
+<strong>Kulajda</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Hovězí guláš s houskovým knedlíkem NEBO rýží</strong>
+<strong>Pečená Vepřová krkovička s lepenicí</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							127,-
 						</span>
 </p>
 <p>
-<strong>Těstoviny se slaninovo-žampionovou omáčkou, kuřecím masem a sýrem</strong>
+<strong>Masová tortilla se sýrem na ledovém salátku s tomatovou salsou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
