--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,7 +52,57 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 14.9.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="polevka">
+<div class="polozka">300ml Kulajda s houbami, koprem a vajíčkem v menu <em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Kulajda s houbami, koprem a vajíčkem samostatně <em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Vepřová pečeně, restovaná kapusta, šťouchané brambory se smetanou a pórkem <em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Kuřecí soté s pečenou dýní, basmati rýže, jarní cibulka <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Zeleninové ragú v arašídové omáčce, jasmínová rýže, cherry rajčata <em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">139 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>250g Bavorská bageta se šunkou/vajíčkem, sýrem a čerstvou zeleninou <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">5. </span>200g Okurkový salát <em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">6. </span>200g Ovocný salát </div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">7. </span>100g Tiramisu <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">8. </span>80g Ořechový košíček se skořicí a bílou čokoládou <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Skořápkové plody">8</em></div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -130,7 +180,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy jihocesky siven s citronem a omackou z pecenych paprik, zeleninovy bulgur, salatek {L} 139</li><li>Peceny filet z cerstveho africkeho sumecka s citronem a omackou z pecenych paprik, zeleninovy bulgur, salatek {L} 169</li><li> Indicka kruti korma s pecenymi paprikami a kvetakem, kokosovym mlekem, zazvorem a orisky, jasminova ryze 139</li><li>Grilovane medailonky z panenske svickove s hruskovym catny, gratinovane brambory, salatek 169</li><li>Imam bayildi – zapecene lilky po turecku s rajcaty, restovanou cibulkou, bazalkou a balkanskym syrem, zeleninovy bulgur, salatek (L)139 </li></ol>
+<ol><li>Peceny filet z atlanticke makrely se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou a zelenymi bylinkami 139</li><li>Ceviche z cerstve bile tresky se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou a zelenymi bylinkami 169</li><li>Rostbif z hoveziho valecku, libanonska cervena cocka se zeleninou, arabsky chleb, salatek {L} 139</li><li>Maghrebska pikantni jehneci saksuka s rajcaty, paprikami, lilky a harissou, zapecena s vejcem a balkanskym syrem, bulgur, salatek {L} 139</li><li>Smazena hliva a zampiony, stouchane brambory s kapustou, tatarska omacka {L} 139</li></ol>
 </td>
 </tr>
 </table>
