Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -180,7 +180,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou a zelenymi bylinkami 139</li><li>Ceviche z cerstve bile tresky se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou a zelenymi bylinkami 169</li><li>Rostbif z hoveziho valecku, libanonska cervena cocka se zeleninou, arabsky chleb, salatek {L} 139</li><li>Maghrebska pikantni jehneci saksuka s rajcaty, paprikami, lilky a harissou, zapecena s vejcem a balkanskym syrem, bulgur, salatek {L} 139</li><li>Smazena hliva a zampiony, stouchane brambory s kapustou, tatarska omacka {L} 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou a zelenymi bylinkami 139</li><li>Ceviche z cerstve bile tresky se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou a zelenymi bylinkami 169</li><li>Rostbif z hoveziho valecku, libanonska cervena cocka se zeleninou, arabsky chleb, salatek {L} 139</li><li>Maghrebska pikantni danci saksuka s rajcaty, paprikami, lilky a harissou, zapecena s vejcem a balkanskym syrem, bulgur, salatek {L} 165</li><li>Smazena hliva a zampiony, stouchane brambory s kapustou, tatarska omacka {L} 139</li></ol>
 </td>
 </tr>
 </table>
