Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -14,17 +14,17 @@
 						</span>
 </p>
 <p>
-<strong>Pečená Vepřová krkovička s lepenicí</strong>
+<strong>Vepřová líčka na víně s bramborovou kaší a zeleninou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							135,-
 						</span>
 </p>
 <p>
-<strong>Masová tortilla se sýrem na ledovém salátku s tomatovou salsou</strong>
+<strong>Zeleninové rizoto s kuřecím masem, sýrem a okurkou NEBO červenou řepou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							125,-
 						</span>
 </p>
 <p>
