Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,21 +7,21 @@
 <h5>Čtvrtek, 16. 09. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Gulášová</strong>
+<strong>Hrášková</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Vepřová líčka na víně s bramborovou kaší a zeleninou</strong>
+<strong>Smažený Vepřový řízek s francouzským bramborovým salátem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							127,-
 						</span>
 </p>
 <p>
-<strong>Zeleninové rizoto s kuřecím masem, sýrem a okurkou NEBO červenou řepou</strong>
+<strong>Těstoviny se slaninovou omáčkou a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							125,-
