Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -21,10 +21,10 @@
 						</span>
 </p>
 <p>
-<strong>Těstoviny se slaninovou omáčkou a parmazánem</strong>
+<strong>Těstoviny s omáčkou s uzeným masem a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							125,-
+							123,-
 						</span>
 </p>
 <p>
