Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -125,7 +125,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy pstruh s citronem a petrzelkovym pestem, bramborovy salat s krenem, cervenou repou, zelenymi bylinkami a majonezou 139</li><li>Smazeny filet z cerstve tresky tmave v pivnim testicku s celozrnnou horcici, bramborovy salat s cervenou repou, zelenymi bylinkami a majonezou {L} 169</li><li>Pecena panenska svickova s omackou teryiaki, prazenym sezamem a zelenymi bylinkami, jasminova ryze, salatek 139</li><li>Peceny kralik al Cacciatore {po myslivecku} na cervenem vine s paprikami, rajcaty, tymianem, slaninou, houbami a cernymi olivami, pohanka se smazenou cibulkou, salatek 169</li><li>Smazene indicke brokolicove placicky s hrachem, ajowanem a petrzelkou, zeleninove birjany z basmati ryze, jogurtovy dip, salatek 139 </li></ol>
+<ol><li>Peceny atlanticky hejk se susenymi rajcaty a kaparami, cockovy salat s paprikami, cuketami a pak coj 139</li><li>Pecene cerstve velke spanelske sardinky s citronem, susenymi rajcaty a kaparami, cockovy salat s paprikami, cuketami a pak coj 169</li><li>Tanduri kebab z krutich prsou v korenene jogurtove marinade, zeleninove birjany z basmati ryze, okurkove tzatziki, salatek 139</li><li>Smazeny teleci sekany rizek s goudou, petrzelkou a spetkou muskatu, bramborovy salat s cervenou repou, zelenymi bylinkami a majonezou,  citron {L} 169</li><li>Baba ganus – lilkovy dip s tahini, turecka nakladana zelenina, olivy, arabske placky {L} 139 </li></ol>
 </td>
 </tr>
 </table>
