Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -146,7 +146,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny atlanticky hejk se susenymi rajcaty a kaparami, cockovy salat s paprikami, cuketami a pak coj 139</li><li>Pecene cerstve velke spanelske sardinky s citronem, susenymi rajcaty a kaparami, cockovy salat s paprikami, cuketami a pak coj 169</li><li>Tanduri kebab z krutich prsou v korenene jogurtove marinade, zeleninove birjany z basmati ryze, okurkove tzatziki, salatek 139</li><li>Smazeny teleci sekany rizek s goudou, petrzelkou a spetkou muskatu, bramborovy salat s cervenou repou, zelenymi bylinkami a majonezou,  citron {L} 169</li><li>Baba ganus – lilkovy dip s tahini, turecka nakladana zelenina, olivy, arabske placky {L} 139 </li></ol>
+<ol><li>Thajske cervene kari s kousky rybich filetu {hejk, makrela, treska}, pak coj, paprikami citronovou travou, kokosovym mlekem a koriandrem, jasminova ryze 139</li><li>Peceny filet z cerstve kambaly a papousci ryby s jogurtovou krenovou omackou, pecene brambory, salatek 175</li><li>Grilovane turecke hovezi kofte s omackou z pecenych paprik, arabske placky, bulgur, salatek {L}139 </li><li>Bramborove gnocchi s trhanou pecenou husou, kapustou, kaparami a parmezanem {L} 169</li><li>Pecene papriky a cukety zapecene s bylinkami a goudou, cockovy salat se zeleninou 139 </li></ol>
 </td>
 </tr>
 </table>
