Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Pátek, 17. 09. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Hrášková</strong>
+<strong>Kapustová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Smažený Vepřový řízek s francouzským bramborovým salátem</strong>
+<strong>Kuřecí čína s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							129,-
 						</span>
 </p>
 <p>
-<strong>Těstoviny s omáčkou s uzeným masem a parmazánem</strong>
+<strong>Dukátové buchtičky s vanilkovým krémem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							123,-
+							105,-
 						</span>
 </p>
 <p>
@@ -146,7 +146,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thajske cervene kari s kousky rybich filetu {hejk, makrela, treska}, pak coj, paprikami citronovou travou, kokosovym mlekem a koriandrem, jasminova ryze 139</li><li>Peceny filet z cerstve kambaly a papousci ryby s jogurtovou krenovou omackou, pecene brambory, salatek 175</li><li>Grilovane turecke hovezi kofte s omackou z pecenych paprik, arabske placky, bulgur, salatek {L}139 </li><li>Bramborove gnocchi s trhanou pecenou husou, kapustou, kaparami a parmezanem {L} 169</li><li>Pecene papriky a cukety zapecene s bylinkami a goudou, cockovy salat se zeleninou 139 </li></ol>
+<ol><li>Thajske cervene kari s kousky rybich filetu {hejk, makrela, treska}, pak coj, paprikami citronovou travou, kokosovym mlekem a koriandrem, jasminova ryze 139</li><li>Peceny filet z cerstve kambaly a papousci ryby s jogurtovou krenovou omackou, pecene brambory, salatek 179</li><li>Grilovane turecke hovezi kofte s omackou z pecenych paprik, arabske placky, bulgur, salatek {L}139 </li><li>Bramborove gnocchi s trhanou pecenou husou, kapustou, kaparami a parmezanem {L} 169</li><li>Pecene papriky a cukety zapecene s bylinkami a goudou, cockovy salat se zeleninou 139 </li></ol>
 </td>
 </tr>
 </table>
